force-app/main/default/objects/KimbleOne__ResourcedActivitySupplierInvoice__c/KimbleOne__ResourcedActivitySupplierInvoice__c.object-meta.xml
<CustomObject>
    <label>Resourced Activity Supplier Invoice</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Resourced Activity Supplier Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resourced Activity Supplier Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>